2007-09-29  Brian Warner  <warner@lothar.com>

	* buildbot/steps/source.py (Mercurial.computeSourceRevision): take
	the revision id from the last change in our list, since that's the
	best we can do without knowing the full ancestry graph. Closes #103.

	* buildbot/scripts/sample.cfg: use buildstep instances in
	f.addStep, to demonstrate the (correct) modern usage.
	* docs/examples/hello.cfg: bring this up to date. Closes #79.
	* docs/examples/twisted_master.cfg: add a big warning about how
	old this is
	* docs/examples/glib_master.cfg: delete this one entirely, it is
	ancient and not a very useful example anyways

	* buildbot/status/web/base.py (HtmlResource.render): keep track of
	HTTPChannels, so we can shut them down at reconfig time (when the
	WebStatus goes away). Closes #102.
	* buildbot/status/web/baseweb.py (WebStatus.__init__): same
	(WebStatus.registerChannel): same
	(WebStatus.stopService): do .loseConnection() here

	* buildbot/test/test_webparts.py (Webparts.testPages): reload the
	WebStatus, make sure all pages are still retrievable. I thought
	this would exercise a bug, but it turns out that it was firefox
	caching connections (and continuing to talk to the old WebStatus
	even though I'd loaded a new one).
	* buildbot/status/web/baseweb.py (WebStatus): add some comments
	(WebStatus.__repr__): include id() in the repr

	* buildbot/status/tinderbox.py (TinderboxMailNotifier): allow
	this to specify an errorparser. From Ted Mielczarek and the
	mozilla crew. Closes #94.

	* buildbot/changes/bonsaipoller.py (BonsaiParser): "Make
	bonsaipoller ignore funkyness in xml output for empy log
	messages", from Axel Hecht. Closes #90.
	* buildbot/test/test_bonsaipoller.py
	(TestBonsaiPoller.testMergeEmptyLogMsg): same

	* buildbot/status/tinderbox.py (TinderboxMailNotifier.buildStarted):
	respect 'builders' arg, from Ben Hearsum. Closes #89.

	* buildbot/scripts/runner.py (stop): increase the timeout from 5